<?xml version="1.0"?>
<package>
  <name>access_costmap2d</name>
  <version>0.0.0</version>
  <description>The access_costmap2d package</description>
  <maintainer email="adrian@todo.todo">adrian</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>costmap_2d</build_depend>
  
  <run_depend>tf</run_depend>
  <run_depend>costmap_2d</run_depend>
</package>
