<?xml version="1.0"?>
<package>
  <name>publish_change_initialpose_rviz</name>
  <version>0.0.0</version>
  <description>The publish_change_initialpose_rviz package</description>

  <maintainer email="adrian@todo.todo">adrian</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
